--- a/css/css.css
+++ b/css/css.css
@@ -87,13 +87,16 @@
 /*Page 2 classes*/
 
 /*Page 2 id's*/
-#outerbox {
-	margin-left: auto;
-	margin-right: auto;
-}
 
 #mainbox {
 	height: 270px;
 	width: 500px;
-	margin-top: 160px;
+	margin-top: 75px;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+}
+
+#innerbox {
+
 }
