--- a/css/css.css
+++ b/css/css.css
@@ -98,13 +98,13 @@ a {
 }
 
 #mainbox {
-	height: 170px;
+	height: 70px;
 	width: 500px;
 	margin-top: 75px;
 	margin-left: auto;
 	margin-right: auto;
 	text-align: center;
-	padding-top: 100px;
+	padding-top: 10px
 }
 
 #innerbox {
