--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -91,6 +91,20 @@
   #page1bot {
   margin-top: 100px;
   }
+
+  #innloggingsform {
+  width: 306px;
+  }
+
+  #submit {
+    width: 70px;
+    height: 40px;
+    font-size: 10px;
+  }
+
+  .bruker {
+  font-size: 12px;
+  }
 }
 
 @media (max-width: 480px) and (min-width: 320px) {
@@ -110,23 +124,70 @@
   #page1bot {
   margin-top: 80px;
   }
+
+  .brukerinput {
+  width: 260px;
+  height: 30px;
+  }
+
+  #innloggingsform {
+  width: 266px;
+  }
+
+  #submit {
+    width: 60px;
+    height: 30px;
+    font-size: 10px;
+  }
+
+  .bruker {
+  font-size: 12px;
+  }
+
 }
 
 @media (max-width: 320px) and (min-width: 0px) {
+  /* Størrelse ACT logo */
   .mainlogo {
     height: 70px;
   }
 
+  /* Størrelse tekst under logo */
   #textlogo {
     height: 70px;
   }
 
+  /* Bredde på footer bilde */
   #footerpic {
     max-width: 320px;
     overflow: hidden;
   }
 
+  /* Margin mellom footer og innlogging */
   #page1bot {
   margin-top: 60px;
+  }
+
+  /* Størrelse på brukerinput */
+  .brukerinput {
+  width: 200px;
+  height: 25px;
+  }
+
+  /* Størrelse på selve formen */
+  #innloggingsform {
+  width: 266px;
+  }
+
+  /* Størrelse av Logg inn knapp */
+  #submit {
+    width: 60px;
+    height: 30px;
+    font-size: 10px;
+  }
+
+  /* Tekststørrelse over input */
+  .bruker {
+  font-size: 12px;
   }
 }
