endringer på innlogging
sentrert alt, endret litt css, denne ser bra ut på mobil men må fikse
positioning på innloggingsknapp og teksten over input, har kommentert
ut gammel kode

--- a/css/css.css
+++ b/css/css.css
@@ -87,7 +87,7 @@ html, body {
 }
 
 
-#submit {
+/*#submit {
 	margin-top: 20px;
 	background-color: transparent;
 	height: 46px;
@@ -96,11 +96,11 @@ html, body {
 	font-size: 18px;
 	font-family: Verdana;
 	-webkit-transition: background-color 0.5s, color 0.5s;
+	position: relative;
+	right: 0px;
 
-}
-#submitdiv {
-	text-align: right;
-}
+}*/
+
 
 #submit:hover {
 	background-color: #101010;
