--- a/css/css.css
+++ b/css/css.css
@@ -112,23 +112,26 @@ html, body {
 }
 
 /*Page 2 classes*/
+.mainbox2 {
+	margin-left: auto;
+	margin-right: auto;
+	height: 70px;
+	width: 500px;
+}
 
 /*Page 2 id's*/
 a {
 	text-decoration: none;
 }
 
-#mainbox {
-	height: 70px;
-	width: 500px;
+#topbox {
+
 	margin-top: 75px;
-	margin-left: auto;
-	margin-right: auto;
 	text-align: center;
 	padding-top: 10px
 }
 
-#innerbox {
+#textbox {
 	width: 200px;
 	margin-left: auto;
 	margin-right: auto;
@@ -146,4 +149,18 @@ a {
 
 ul {
 	list-style-type: none;
+}
+
+#sok {
+	width: 500px;
+	height: 240px;
+	margin-right: auto;
+	margin-left: auto;
+	background-color: black;
+	visibility: hidden;
+	-webkit-transition: height 1s;
+}
+
+#innerbox:hover #sok{
+	visibility: visible;
 }
