--- a/css/css.css
+++ b/css/css.css
@@ -151,16 +151,31 @@ ul {
 	list-style-type: none;
 }
 
-#sok {
+#open {
 	width: 500px;
-	height: 240px;
+	height: 0px;
 	margin-right: auto;
 	margin-left: auto;
 	background-color: black;
-	visibility: hidden;
 	-webkit-transition: height 1s;
 }
 
-#innerbox:hover #sok{
-	visibility: visible;
+#close {
+	height: 40px;
+	width: 40px;
+	margin-left: auto;
+	margin-right: auto;
+	background: white;
+	-webkit-transition: height 1s;
+}
+#open:target {
+	height: 240px;
+}
+
+#close:target #open {
+	height: 0px;
+}
+
+#botbox {
+	position: relative;
 }
