--- a/css/css.css
+++ b/css/css.css
@@ -204,7 +204,7 @@ ul {
 	width: 400px;
 	margin-left: auto;
 	margin-right: auto;
-	height: 250;
+	height: 250px;
 	text-align: center;
 	display: none;
 }
