--- a/css/css.css
+++ b/css/css.css
@@ -135,6 +135,16 @@ html, body {
 /*Page 2 id's*/
 a {
 	text-decoration: none;
+	color: black;
+	font-size: 18px;
+}
+
+a:visited {
+    color: black;
+}
+
+a:hover {
+    color: rgb(255, 112, 97);
 }
 
 #firstbox {
