--- a/css/css.css
+++ b/css/css.css
@@ -14,21 +14,12 @@ html, body {
 #feilmelding {
 	text-align: center;
 	padding-top: 15px;
+	padding-bottom: 15px;
 	margin-top: 10px;
 	background-color: #FD7265;
 	margin-right: auto;
 	margin-left: auto;
-}
-
-#greenmessage {
-	text-align: center;
-	padding-top: 15px;
-	margin-top: 20px;
-	background-color: #63CAA6;
 	width: 383px;
-	height: 35px;
-	margin-right: auto;
-	margin-left: auto;
 }
 
 #calendar {
@@ -67,7 +58,6 @@ html, body {
 	text-align: left;
 } 
 
-
 .brukerinput {
 	width: 377px;
 	height: 46px;
@@ -75,6 +65,7 @@ html, body {
 	background-color: transparent;
 	text-align: center;
 }
+
 .brukerinput[type="email"] {
 	font-size: 18px;
 }
@@ -111,11 +102,27 @@ html, body {
 	-webkit-transition: background-color 0.5s, color 0.5s;
 	position: relative;
 	right: 0px;
-
 }
 
+#logoutbutton {
+	margin-top: 20px;
+	background-color: transparent;
+	height: 30px;
+	width: 100px;
+	border: solid 2px black;
+	font-size: 14px;
+	-webkit-transition: background-color 0.5s, color 0.5s;
+	position: relative;
+	right: 0px;
+	text-align: center;
+}
 
 #submit:hover {
+	background-color: #101010;
+	color: white;
+}
+
+#logoutbutton:hover {
 	background-color: #101010;
 	color: white;
 }
@@ -128,8 +135,9 @@ html, body {
 .mainbox2 {
 	margin-left: auto;
 	margin-right: auto;
-	height: 70px;
+	height: 110px;
 	width: 500px;
+	text-align: center;
 }
 
 /*Page 2 id's*/
@@ -148,21 +156,42 @@ a:hover {
 }
 
 #firstbox {
-
-	margin-top: 75px;
+	margin-top: 30px;
 	text-align: center;
-	padding-top: 10px
+	padding-top: 45px
 }
 
 #textbox {
-	width: 200px;
+	width: 250px;
 	margin-left: auto;
 	margin-right: auto;
-	border: 1px solid black;
+	border: 3px solid black;
 	background-color: transparent;
 	color: black;
-	-webkit-transition: color 0.5s, border-color 0.5s;
+	-webkit-transition: background-color 0.5s, color 0.5s;
 
+}
+
+#textbox:hover {
+	background-color: #101010;
+	color: white;
+}
+
+#roomopener {
+	margin-top: 20px;
+	background-color: transparent;
+	height: 30px;
+	width: 100px;
+	font-size: 18px;
+	-webkit-transition: background-color 0.5s, color 0.5s;
+	position: relative;
+	right: 0px;
+	text-align: center;
+}
+
+#roomopener:hover {
+	background-color: #101010;
+	color: white;
 }
 
 #innerbox:hover {
@@ -191,13 +220,14 @@ ul {
 }
 
 #secondbox {
-	margin-top: 90px;
+	margin-top: 40px;
 	height: 20px;
 	width: 500px;
 	border-top: 3px solid black;
 	margin-left: auto;
 	margin-right: auto;
 	text-align: center;
+	padding-top: 5px;
 }
 
 #secondboxbot {
@@ -213,7 +243,7 @@ ul {
 	width: 400px;
 	margin-left: auto;
 	margin-right: auto;
-	height: 250px;
+	height: auto;
 	text-align: center;
 	display: none;
 }
