--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -163,6 +163,10 @@ width: 330px;
   font-size: 11px;
 }
 
+#showrooms {
+  font-size: 14px;
+}
+
 }
 
 @media (max-width: 480px) and (min-width: 0px) {
@@ -229,6 +233,10 @@ width: 300px;
   height: 20px;
   width: 80px;
   font-size: 10px;
+}
+
+#showrooms {
+  font-size: 12px;
 }
 
 }
