--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -167,6 +167,10 @@ width: 330px;
   font-size: 14px;
 }
 
+#logout {
+  font-size: 14px;
+}
+
 }
 
 @media (max-width: 480px) and (min-width: 0px) {
@@ -236,6 +240,10 @@ width: 300px;
 }
 
 #showrooms {
+  font-size: 12px;
+}
+
+#logout {
   font-size: 12px;
 }
 
